# SLEFE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: UniSlefe.hpp  UniSlefeBuilder.hpp
src/app/: CMakeLists.txt
src/app/cpp/: main.cpp
src/lib/: CMakeLists.txt
src/lib/cpp/: UniSlefe.cpp  UniSlefeBuilder.cpp  UniSlefeTables.cpp
src/lib/hpp/: UniSlefe.hpp
src/tst/: CMakeLists.txt
src/tst/cpp/: slefetests.cpp
